Shifted to python3 project

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>walkingRobot</name>
+	<name>WalkingRobotP3</name>
 	<comment></comment>
 	<projects>
 	</projects>
